Closed Bug 1248983 Opened 10 years ago Closed 10 years ago

Fix spelling for nsCocoaWindow.mm

Categories

(Core :: Widget: Cocoa, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox47 --- fixed

People

(Reporter: garbas, Assigned: garbas)

Details

Attachments

(1 file)

Assignee: nobody → rok
Attached patch fix_typo.patchSplinter Review
Flags: needinfo?(josh)
Attachment #8720311 - Flags: review+
Attachment #8720311 - Flags: review+
Attachment #8720311 - Flags: review+
Flags: needinfo?(josh)
Attachment #8720311 - Flags: review+
Attachment #8720311 - Flags: review+
Comment on attachment 8720311 [details] [diff] [review] fix_typo.patch need a review
Attachment #8720311 - Flags: review?(josh)
Attachment #8720311 - Flags: review?(josh) → review+
How would I continue to get this patch merged into mozilla-central. Is it required to submit to mozreview? Basically the question is ... How would I move forward? (except of bugging you :P)
Flags: needinfo?(josh)
If treeherder shows that the build succeeded, the next step is to add the checkin-needed keyword to the Keywords field. It will then be merged into mozilla-inbound for you, and mozilla-inbound will be merged in turn into mozilla-central, at which point this bug will be marked resolved.
Flags: needinfo?(josh)
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: