Bug 1248983 - Fix spelling for nsCocoaWindow.mm. r=jdm